src/tess/tl/test/pass/test_lambda_capture_mutate.tl
#module main

main() {
    x: CInt := 1
    f       := (n) { x = x + n }
    f(-1)
    x
}
