src/tess/tl/test/fail/test_fail_cchar_u_suffix.tl
// u-suffixed literal should not bind to CChar
#module main

main() {
    x: CChar := 65u
    x
}
